2007-01-29  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (add_lang_action), (create_lang_actions):
	Avoid leaking data from the language hash-table, escape languages
	before putting them in the subtitles or languages menu

2007-01-29  Bastien Nocera  <hadess@hadess.net>

	* src/totem-menu.c: (escape_label_for_menu),
	(totem_recent_manager_changed_callback), (add_device_to_menu):
	Truncate the URI before escaping it for use in the menu items,
	avoids mnemonics showing up in the menu if we have underscores in
	filenames (Closes: #401872)

2007-01-29  Bastien Nocera  <hadess@hadess.net>

	* data/Makefile.am: Patch from Christian Persch <chpe@svn.gnome.org>
	to fix redirection of the gconftool-2 command (Closes: #401758)

2007-01-29  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/idl/totemIComplexPlayer.idl: update IDL file to
	include all the documented and non-deprecated functions from Real Player
	and Helix Player
	* browser-plugin/totemComplexPlugin.cpp:
	* browser-plugin/totemComplexPlugin.h: Patch from Christian Persch
	<chpe@svn.gnome.org> to add stubs for those functions

2007-01-29  Bastien Nocera  <hadess@hadess.net>

	* src/plparse/Makefile.am:
	* src/plparse/plparser.symbols:
	* src/plparse/test-parser.c: (main):
	* src/plparse/totem-pl-parser-private.h:
	* src/plparse/totem-pl-parser.c: (totem_pl_parser_add_url_valist),
	(totem_pl_parser_add_one_url), (totem_pl_resolve_url),
	(totem_pl_parser_parse_internal): Only export public symbols in the
	library to avoid the symbol-snatchers, const a few functions as
	required, return an error when there was an error parsing,
	Avoid crashes when the filename tells us it's an MP3, but we can't
	verify it (Closes: #400702)

2007-01-29  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Patch from Christian Persch <chpe@svn.gnome.org>
	to disable the browser plugin correctly (Closes: #401561)

2007-01-29  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-gst-0.10.c: